# poetry-versions-plugin

./: Makefile  README.md  pyproject.toml  tox.ini
poetry_versions_plugin/: __init__.py  plugin.py  services.py  utils.py  versions.py
scripts/: release.py
tests/: poetry_test.py  release_test.py  services_test.py
