[tool.poetry]
name = "poetry-versions-plugin"
version = "0.1.0"
description = ""
authors = ["xy.kong <xy.kong@gmail.com>"]
readme = "README.md"
packages = [{ include = "poetry_versions_plugin" }]

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.43"
poetry = "^1.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.versions]
branch = "release/0.1.0"
commit = "0694d2e"
commit_count = 7
is_dirty = true
datetime = "2024-11-18 00:56:19"
version = "0.1.0"

[tool.versions.settings]
allow_dirty = true
commit = true
commit_on = ["major", "minor"]
commit_message = "Bump version: {current_version} → {new_version}"
filename = [
    "poetry_versions_plugin/versions.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.plugin"]
versions = "poetry_versions_plugin.plugin:VersionsPlugin"

[tool.poetry.plugins."poetry.application.plugin"]
versions = "poetry_versions_plugin.plugin:VersionsApplicationPlugin"
