[tool.poetry]
name = "poetry-versions-plugin"
version = "0.3.0"
description = "Poetry plugin that automates version management and records Git information for Python projects."
authors = ["xy.kong <xy.kong@gmail.com>"]
readme = "README.md"
packages = [{ include = "poetry_versions_plugin" }]
license = "Apache-2.0"
homepage = "https://github.com/xykong/poetry-versions-plugin"
repository = "https://github.com/xykong/poetry-versions-plugin"
documentation = "https://github.com/xykong/poetry-versions-plugin/blob/master/README.md"
keywords = ["packaging", "poetry", "plugin", "versioning", "git"]

[tool.poetry.dependencies]
python = "3.*"
gitpython = "^3.1.43"
poetry = "^1.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.versions]
branch = "release/0.3.0"
commit = "72a81fe"
commit_count = 19
is_dirty = true
datetime = "2024-11-18 16:20:34"
version = "0.3.0"

[tool.versions.settings]
allow_dirty = true
commit = true
commit_on = ["major", "minor"]
commit_message = "Bump version: {current_version} → {new_version}"
filename = [
    "poetry_versions_plugin/versions.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.plugin"]
versions = "poetry_versions_plugin.plugin:VersionsPlugin"

[tool.poetry.plugins."poetry.application.plugin"]
versions = "poetry_versions_plugin.plugin:VersionsApplicationPlugin"
